--- a/css/iot.css
+++ b/css/iot.css
@@ -8,8 +8,8 @@
 }
 
 .circulo {
-     width: 100px;
-     height: 100px;
+     width: 50px;//100px;
+     height: 50px;//100px;
      -moz-border-radius: 50%;
      -webkit-border-radius: 50%;
      border-radius: 50%;
