--- a/css/iot.css
+++ b/css/iot.css
@@ -1,10 +1,17 @@
 .cuadrado {
      width: 100px; 
      height: 100px; 
-     background: #428bca;
-	 --padding: 0px 0px 0px 0px;
-	 --position : absolute;
-	 --float: inherit;
+     border: 3px solid #555;
+     
+     
+     
+   --padding: 0px 0px 0px 0px;
+   --position : absolute;
+   --float: inherit;
+      border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+
 }
 
 .circulo {
@@ -14,15 +21,20 @@
      -webkit-border-radius: 50%;
      border-radius: 50%;
      background: #5cb85c;
-	 --padding: 0px 0px 0px 0px;
-	 --position : absolute;
-	 --float: inherit;
+   --padding: 0px 0px 0px 0px;
+   --position : absolute;
+   --float: inherit;
 }
 
 #box{
      width: 1200px;
      height: 400px;
-	 border-style: solid;
-	 --position : absolute
-	 --margin: 100px 0px 0px 0px;
+   border-style: solid;
+      border-radius: 10px 10px 10px 10px;
+      -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+   --position : absolute
+   --margin: 100px 0px 0px 0px;
+
 }
