--- a/css/iot.css
+++ b/css/iot.css
@@ -3,7 +3,7 @@
        width: 400px;
        height: 150px;
        margin-left:10px;
-       position: absolute;
+       position: fixed;
        left: 2px;
        top: 0px;
 
@@ -12,7 +12,7 @@
 .panelPropiedades{
     width: 918px;
     height: 150px;
-    position:absolute;
+    position:fixed;
     left: 412px;
     top: 0px;
     border: 2px solid #555;
@@ -49,8 +49,8 @@
 }
 
 #box{
-     width: 1320px;
-     height: 430px;
+     width: 1820px;
+     height: 630px;
      top: 152px;
      position: absolute;
      border: 2px solid #555;
