Se realizan pruebas, no del todo exitosas

--- a/css/iconBar.css
+++ b/css/iconBar.css
@@ -4,6 +4,26 @@
     overflow: auto; /* Overflow due to float */
 }
 
+.icon-bar-iot {
+    width: 400px; /* Full-width */
+    height: 50px; /* Full-width */
+    background-color: #555; /* Dark-grey background */
+    overflow: auto; /* Overflow due to float */
+}
+
+.icon-bar-iot a {
+    float: left; /* Float links side by side */
+    text-align: center; /* Center-align text */
+    width: 20%; /* Equal width (5 icons with 20% width each = 100%)
+    padding: 12px 0; /* Some top and bottom padding */
+    transition: all 0.3s ease; /* Add transition for hover effects */
+    color: white; /* White text color */
+    font-size: 36px; /* Increased font size */
+}
+
+.icon-bar-iot a:hover {
+    background-color: #000; /* Add a hover color */
+}
 .icon-bar a {
     float: left; /* Float links side by side */
     text-align: center; /* Center-align text */
