--- a/css/iot.css
+++ b/css/iot.css
@@ -1,3 +1,4 @@
+/*
 .cuadrado {
      width: 100px; 
      height: 100px; 
@@ -18,11 +19,11 @@
 	 --position : absolute;
 	 --float: inherit;
 }
-
+*/
 #box{
      width: 1200px;
      height: 400px;
 	 border-style: solid;
-	 --position : absolute
-	 --margin: 100px 0px 0px 0px;
+	 //--position : absolute
+	 //--margin: 100px 0px 0px 0px;
 }
