--- a/css/iconBar.css
+++ b/css/iconBar.css
@@ -5,16 +5,16 @@
 }
 
 .icon-bar-iot {
-    width: 400px; /* Full-width */
-    height: 50px; /* Full-width */
+    width: 200px; /* Full-width */
+    height: 36px; /* Full-width */
     background-color: #555; /* Dark-grey background */
-    overflow: auto; /* Overflow due to float */
+    //overflow: auto; /* Overflow due to float */
 }
 
 .icon-bar-iot a {
     float: left; /* Float links side by side */
     text-align: center; /* Center-align text */
-    width: 20%; /* Equal width (5 icons with 20% width each = 100%)
+    width: 100px; /* Equal width (5 icons with 20% width each = 100%)
     padding: 12px 0; /* Some top and bottom padding */
     transition: all 0.3s ease; /* Add transition for hover effects */
     color: white; /* White text color */
