--- a/css/iconBar.css
+++ b/css/iconBar.css
@@ -6,7 +6,7 @@
 
 .icon-bar-iot {
     width: 200px; /* Full-width */
-    height: 36px; /* Full-width */
+    height: 36px; /* Full-height */
     background-color: #555; /* Dark-grey background */
     //overflow: auto; /* Overflow due to float */
 }
@@ -17,7 +17,7 @@
     width: 100px; /* Equal width (5 icons with 20% width each = 100%)
     padding: 12px 0; /* Some top and bottom padding */
     transition: all 0.3s ease; /* Add transition for hover effects */
-    color: white; /* White text color */
+    color: yellow;//white; /* White text color */
     font-size: 36px; /* Increased font size */
 }
 
