--- a/css/iot.css
+++ b/css/iot.css
@@ -24,6 +24,6 @@
      width: 1200px;
      height: 400px;
 	 border-style: solid;
-	 --position : absolute
-	 --margin: 100px 0px 0px 0px;
+	 //position : absolute
+	 //margin: 100px 0px 0px 0px;
 }
