--- a/css/iot.css
+++ b/css/iot.css
@@ -27,3 +27,52 @@
     background-color: #000; /* Add a hover color */
 }
 
+.radar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    //border: 10px solid #fff;
+    border: 1px solid #fff;
+    width: 50px;
+    height: 50px;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    -webkit-animation: radar 2s infinite;
+    animation: radar 2s infinite;
+    opacity: 0;
+    overflow:hidden;
+}
+
+.bg{
+    background:rgba(0,0,0,1);
+    width:100%;
+    height:100%;
+    overflow: hidden; 
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+@keyframes radar{
+    0%{
+        width:36px;//50px;
+        height:36px;//50px;
+        border:40px solid #fff;
+        opacity:0
+    }50%{
+        opacity:.1
+    }
+    90%{
+        width:180px;//750px;
+        height:180px;//750px
+    }
+    90%,100%{
+        border:2px 
+            solid #fff;
+        opacity:0
+    }100%{
+        width:360px;//1500px;
+        height:360px;//1500px
+    }
+}
