--- a/css/iot.css
+++ b/css/iot.css
@@ -1,16 +1,18 @@
 #box{
-     width: 1200px;
+     width: 1178px;
      height: 400px;
 	 border-style: solid;
 	 //position : absolute
 	 //margin: 100px 0px 0px 0px;
+     float: left;
 }
 
 .icon-bar{
-    width: 1206px; /* Full-width */
-    height: 36px; /* Full-height */
+    width: 100px;//1206px; /* Full-width */
+    height: 72px; /* Full-height */
     background-color: #555; /* Dark-grey background */
     //overflow: auto; /* Overflow due to float */
+    float: right;
 }
 
 .icon-bar a {
@@ -21,6 +23,7 @@
     transition: all 0.3s ease; /* Add transition for hover effects */
     color: yellow;//white; /* White text color */
     font-size: 36px; /* Increased font size */
+    //display: block;
 }
 
 .icon-bar a:hover {
